Salesforce/main/default/objects/Product2/fields/Classes_de_Bonificacao__c.field-meta.xml
<CustomField>
    <fullName>Classes_de_Bonificacao__c</fullName>
    <formula>TEXT(Variedade__r.Classes_de_Bonificacao__c)</formula>
    <label>Classes da Política de Bonificação</label>
    <type>Text</type>
</CustomField>