Salesforce/main/default/objects/Product2/fields/Id_Producto__c.field-meta.xml
<CustomField>
    <fullName>Id_Producto__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Producto</label>
    <type>Text</type>
</CustomField>