Salesforce/main/default/objects/Product2/fields/Licenciada__c.field-meta.xml
<CustomField>
    <fullName>Licenciada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca un producto como licenciado</description>
    <label>Licenciada</label>
    <type>Checkbox</type>
</CustomField>