Salesforce/main/default/objects/Product2/fields/Obtentor__c.field-meta.xml
<CustomField>
    <fullName>Obtentor__c</fullName>
    <description>Lista de Obtentores que debemos mantener(admin)</description>
    <inlineHelpText>Lista de Obtentores que debemos mantener(admin)</inlineHelpText>
    <label>Obtentor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADVANTA</fullName>
            </value>
            <value>
                <fullName>Agrária</fullName>
            </value>
            <value>
                <fullName>Agroeste</fullName>
            </value>
            <value>
                <fullName>AGROMEN</fullName>
            </value>
            <value>
                <fullName>Agro Norte</fullName>
            </value>
            <value>
                <fullName>Avanti Seeds</fullName>
            </value>
            <value>
                <fullName>Basf</fullName>
            </value>
            <value>
                <fullName>Bayer</fullName>
            </value>
            <value>
                <fullName>Brasmax</fullName>
            </value>
            <value>
                <fullName>BREVANT</fullName>
            </value>
            <value>
                <fullName>Br Genetica</fullName>
            </value>
            <value>
                <fullName>CARAIBA</fullName>
            </value>
            <value>
                <fullName>CCGL Tecnología</fullName>
            </value>
            <value>
                <fullName>Coodetec</fullName>
            </value>
            <value>
                <fullName>CORDIUS</fullName>
            </value>
            <value>
                <fullName>CPTA</fullName>
            </value>
            <value>
                <fullName>Credenz</fullName>
            </value>
            <value>
                <fullName>CTP</fullName>
            </value>
            <value>
                <fullName>CTPA/Emgopa</fullName>
            </value>
            <value>
                <fullName>DM Licenças</fullName>
            </value>
            <value>
                <fullName>Don Mario</fullName>
            </value>
            <value>
                <fullName>Dow</fullName>
            </value>
            <value>
                <fullName>Embrapa</fullName>
            </value>
            <value>
                <fullName>FMT</fullName>
            </value>
            <value>
                <fullName>FPS</fullName>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>Fundacep</fullName>
            </value>
            <value>
                <fullName>GDML</fullName>
            </value>
            <value>
                <fullName>Genetica Soy</fullName>
            </value>
            <value>
                <fullName>Geneze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>