Salesforce/main/default/objects/Product2/fields/Oferta_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Oferta_Comercial__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Es la cantidad de sacas disponibles para la venta</description>
    <label>Oferta_Comercial</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>