Salesforce/main/default/objects/Product2/fields/Portal__c.field-meta.xml
<CustomField>
    <fullName>Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el producto está habilitado/deshabilitado para ser devuelto en las APIs creadas para el nuevo Portal. Creado para US #13082</description>
    <label>Portal</label>
    <type>Checkbox</type>
</CustomField>