Salesforce/main/default/objects/Product2/fields/pruebaNV__c.field-meta.xml
<CustomField>
    <fullName>pruebaNV__c</fullName>
    <formula>Variedade__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Variedad</label>
    <type>Text</type>
</CustomField>