Salesforce/main/default/objects/Product2/fields/Variedad__c.field-meta.xml
<CustomField>
    <fullName>Variedad__c</fullName>
    <label>Variedad</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Licenciada__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>BMX APOLO RR</fullName>
            </value>
            <value>
                <fullName>BMX IMPACTO RR</fullName>
            </value>
            <value>
                <fullName>BMX MAGNA RR</fullName>
            </value>
            <value>
                <fullName>BMX POTÊNCIA RR</fullName>
            </value>
            <value>
                <fullName>BMX TITAN RR</fullName>
            </value>
            <value>
                <fullName>BMX FORÇA RR</fullName>
            </value>
            <value>
                <fullName>BMX ENERGIA RR</fullName>
            </value>
            <value>
                <fullName>BMX ATIVA RR</fullName>
            </value>
            <value>
                <fullName>BMX TURBO RR</fullName>
            </value>
            <value>
                <fullName>BMX VELOZ RR</fullName>
            </value>
            <value>
                <fullName>BMX ALVO RR</fullName>
            </value>
            <value>
                <fullName>BMX TORNADO RR</fullName>
            </value>
            <value>
                <fullName>BMX CLASSE RR</fullName>
            </value>
            <value>
                <fullName>BMX DESAFIO RR</fullName>
            </value>
            <value>
                <fullName>BMX RAÇA RR</fullName>
            </value>
            <value>
                <fullName>BMX PROGRESSO RR</fullName>
            </value>
            <value>
                <fullName>BRASMAX ELITE IPRO</fullName>
            </value>
            <value>
                <fullName>BRASMAX FLECHA IPRO</fullName>
            </value>
            <value>
                <fullName>BRASMAX BONUS IPRO</fullName>
            </value>
            <value>
                <fullName>BRASMAX BRAVA</fullName>
            </value>
            <value>
                <fullName>BRASMAX CLASSE</fullName>
            </value>
            <value>
                <fullName>BRASMAX PRISMA</fullName>
            </value>
            <value>
                <fullName>BRASMAX OPUS IPRO</fullName>
            </value>
            <value>
                <fullName>BRASMAX LANÇA IPRO</fullName>
            </value>
            <value>
                <fullName>BRASMAX GARRA IPRO</fullName>
            </value>
            <value>
                <fullName>BRASMAX ÍCONE IPRO</fullName>
            </value>
            <value>
                <fullName>BRASMAX POWER IPRO</fullName>
            </value>
            <value>
                <fullName>68I69RSF IPRO</fullName>
            </value>
            <value>
                <fullName>75I76RSF IPRO</fullName>
            </value>
            <value>
                <fullName>81I84RSF IPRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>