Salesforce/main/default/objects/Product2/fields/Variedade__c.field-meta.xml
<CustomField>
    <fullName>Variedade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variedade</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Variedad__c.Licenciada__c</field>
            <operation>equals</operation>
            <valueField>$Source.Licenciada__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>