Salesforce/main/default/objects/Product2/fields/Variedade_Licenciada__c.field-meta.xml
<CustomField>
    <fullName>Variedade_Licenciada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variedade Licenciada</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Productos (Variedade Licenciada)</relationshipLabel>
    <relationshipName>Productos1</relationshipName>
    <type>Lookup</type>
</CustomField>