Salesforce/main/default/objects/Product2/listViews/Todoslosproductos.listView-meta.xml
<ListView>
    <fullName>Todoslosproductos</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Variedade__c</columns>
    <columns>Obtentor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/10/2021 12:00 AM</value>
    </filters>
    <label>Todos los productos</label>
</ListView>